--- a/app/src/main/res/layout/item_visitor.xml
+++ b/app/src/main/res/layout/item_visitor.xml
@@ -176,6 +176,18 @@
                 app:layout_constraintTop_toTopOf="@+id/tv_tools_name_security"
                 tools:text="Joni Santai" />
 
+            <TextView
+                android:id="@+id/tv_shift"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                android:layout_marginEnd="12dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_name_security"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_name_security"
+                tools:text="Shift Pagi" />
 
             <TextView
                 android:id="@+id/tv_tools_reason"
